RESOLVED FIXED313527
[:has()] Fix failures in css/selectors/invalidation/has-invalidation-first-in-sibling-chain.html WPT
https://bugs.webkit.org/show_bug.cgi?id=313527
Summary [:has()] Fix failures in css/selectors/invalidation/has-invalidation-first-in...
Antti Koivisto
Reported 2026-04-28 00:34:33 PDT
Sibling relation bits reset to eagerly.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-28 00:35:06 PDT
Antti Koivisto
Comment 2 2026-04-28 03:03:05 PDT
EWS
Comment 3 2026-04-28 12:02:12 PDT
Committed 312221@main (45d24e3707e8): <https://commits.webkit.org/312221@main> Reviewed commits have been landed. Closing PR #63782 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.