[:has()] Fix failures in css/selectors/invalidation/has-invalidation-first-in-sibling-chain.html WPT https://bugs.webkit.org/show_bug.cgi?id=313527 rdar://175738008

Reviewed by Alan Baradlay.

Sibling relation bits for :has() can't be reset normally before resolving a subtree because they can get
set for any element at any point of style resolution.

* LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/has-invalidation-first-in-sibling-chain-expected.txt:
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::resetStyleRelations):
(WebCore::Element::resetAllDescendantStyleRelations):
(WebCore::Element::resetHasSiblingFlags):
* Source/WebCore/dom/Element.h:
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::resetDescendantStyleRelations):

Fix by only reseting in case of a full style rebuild from root.

* Source/WebCore/style/StyleTreeResolver.h:

Canonical link: https://commits.webkit.org/312221@main